@@ -689,7 +689,7 @@ public class SQLServerBulkCopy implements java.lang.AutoCloseable {
     private void sendBulkLoadBCP() throws SQLServerException {
         final class InsertBulk extends TDSCommand {
             InsertBulk() {
-                super("InsertBulk", 0);
+                super("InsertBulk", 0, 0);
                 int timeoutSeconds = copyOptions.getBulkCopyTimeout();
                 timeoutTimer = (timeoutSeconds > 0) ? (new BulkTimeoutTimer(timeoutSeconds, this)) : null;
             }
@@ -3348,7 +3348,7 @@ public class SQLServerBulkCopy implements java.lang.AutoCloseable {
                             longValue = (long) (short) value;
                             break;
                         default:
-                            longValue = new Long((Integer) value);
+                            longValue = Long.valueOf((Integer) value);
                     }
                     return ByteBuffer.allocate(Long.SIZE / Byte.SIZE).order(ByteOrder.LITTLE_ENDIAN).putLong(longValue).array();
 
@@ -3362,7 +3362,7 @@ public class SQLServerBulkCopy implements java.lang.AutoCloseable {
                             longValue = (long) (short) value;
                             break;
                         case INTEGER:
-                            longValue = new Long((Integer) value);
+                            longValue = Long.valueOf((Integer) value);
                             break;
                         default:
                             longValue = (long) value;
